fix for z-index ordering for infobar and bottom toolbars

--- a/geoportailv3/static/less/navbars.less
+++ b/geoportailv3/static/less/navbars.less
@@ -41,6 +41,7 @@ header {
 
 .toolbox-panel {
   display: none;
+  z-index: 3;
   position: absolute;
   top: auto;
   bottom: 100%;
